fix(button): fix icon alignment in button

--- a/src/button/button.css
+++ b/src/button/button.css
@@ -42,9 +42,7 @@
     }
 
     &__icon {
-        display: inline-flex;
         padding-right: 10px;
-        line-height: 1;
     }
 
     &_width_available {
